; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_BlePasskeyReply.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_BlePasskeyReply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@BTM_SUCCESS = common dso_local global i64 0, align 8
@SMP_SUCCESS = common dso_local global i32 0, align 4
@SMP_PASSKEY_ENTRY_FAIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Passkey reply to Unknown device\00", align 1
@BTM_SEC_LE_AUTHENTICATED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"BTM_BlePasskeyReply\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BTM_BlePasskeyReply(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.TYPE_3__* @btm_find_dev(i32 %9)
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @BTM_SUCCESS, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @SMP_SUCCESS, align 4
  br label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @SMP_PASSKEY_ENTRY_FAIL, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  store i32 %19, i32* %8, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %21 = icmp eq %struct.TYPE_3__* %20, null
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %35

24:                                               ; preds = %18
  %25 = load i32, i32* @BTM_SEC_LE_AUTHENTICATED, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, %25
  store i32 %29, i32* %27, align 4
  %30 = call i32 @BTM_TRACE_DEBUG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @SMP_PasskeyReply(i32 %31, i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %24, %22
  ret void
}

declare dso_local %struct.TYPE_3__* @btm_find_dev(i32) #1

declare dso_local i32 @BTM_TRACE_ERROR(i8*) #1

declare dso_local i32 @BTM_TRACE_DEBUG(i8*) #1

declare dso_local i32 @SMP_PasskeyReply(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
